# evolution-data-server

./: .cvsignore  .gitattributes  .gitignore  ChangeLog  ChangeLog.2009  ChangeLog.maemo.old  Makefile.am  OH-TODO  Patches  autogen.sh  configure.in  eds.doap  evolution-data-server.pc.in  n770_slimdown.patch
addressbook/: .cvsignore  Makefile.am
addressbook/backends/: Makefile.am
addressbook/backends/file/: Makefile.am  e-book-backend-file-factory.c  e-book-backend-file-index.c  e-book-backend-file-index.h  e-book-backend-file-log.c  e-book-backend-file-log.h  e-book-backend-file-utils.c  e-book-backend-file-utils.h  e-book-backend-file.c  e-dbhash.c
addressbook/libebook-dbus/: .gitignore  Makefile.am  e-address-western.c  e-address-western.h  e-book-query.c  e-book-query.h  e-book-sexp.c  e-book-sexp.h  e-book-types.h  e-book-util.c  e-book-util.h  e-book-view-listener.c  e-book-view-listener.h  e-book-view-private.h  e-book-view.c  e-book-view.h  e-book.c  e-book.h  e-contact.c  e-contact.h  e-destination.c  e-name-western-tables.h  e-name-western.c  e-uchardet.cpp  e-vcard.c  e-vcard.h  libebook.pc.in  test-commit.c  test-econtact.c  test-main.c  test-prototypes.h  test.c
addressbook/libebook-orbit/: e-book-query.c  e-book-query.h  e-book-types.h  e-vcard.c  e-vcard.h
addressbook/libedata-book-dbus/: .cvsignore  Makefile.am  e-book-backend-cache.c  e-book-backend-sexp.c  e-book-backend-sexp.h  e-book-backend-summary.c  e-book-backend-sync.c  e-book-backend-sync.h  e-book-backend.c  e-book-backend.h  e-data-book-factory.c  e-data-book-factory.h  e-data-book-factory.xml  e-data-book-listener.xml  e-data-book-types.h  e-data-book-view-listener.xml  e-data-book-view.c  e-data-book-view.h  e-data-book-view.xml  e-data-book.c  e-data-book.h  e-data-book.xml  glib-gen.mak  libedata-book.pc.in  opid.c  opid.h
addressbook/libedata-book-orbit/: Makefile.am  e-book-backend-factory.h  e-book-backend-sexp.c  e-book-backend-sync.c  e-data-book-factory.c  e-data-book-view.c
addressbook/testsuite/: Makefile  TODO  craphash.c  craphash.h  gen-craphash.c  test-vcard-parse.c  test-vcard-parse.h  test-vcard-photo.c  test-vcard-photo.h  test-vcard-runner.c
calendar/: Makefile.am
calendar/backends/: Makefile.am
calendar/libecal-dbus/: Makefile.am  e-cal-component.c  e-cal-component.h  e-cal-recur.c  e-cal-recur.h  e-cal-time-util.c  e-cal-time-util.h  e-cal-types.h  e-cal-util.c  e-cal-util.h  e-cal-view-listener.c  e-cal-view-listener.h  e-cal-view.c  e-cal-view.h  e-cal.c  e-cal.h  libecal.pc.in
calendar/libecal-orbit/: Makefile.am  e-cal-listener.c  e-cal-recur.c  e-cal-view-listener.c  e-cal-view.c  e-cal.c
calendar/libedata-cal-dbus/: Makefile.am  e-cal-backend-cache.c  e-cal-backend-cache.h  e-cal-backend-factory.c  e-cal-backend-factory.h  e-cal-backend-sexp.c  e-cal-backend-sexp.h  e-cal-backend-sync.c  e-cal-backend-sync.h  e-cal-backend-util.h  e-cal-backend.c  e-cal-backend.h  e-data-cal-common.h  e-data-cal-factory.c  e-data-cal-factory.h  e-data-cal-factory.xml  e-data-cal-marshal.list  e-data-cal-view-listener.xml  e-data-cal-view.c  e-data-cal-view.h  e-data-cal-view.xml  e-data-cal.c  e-data-cal.h  e-data-cal.xml  libedata-cal.pc.in
calendar/libedata-cal-orbit/: Makefile.am
calendar/libical/: .cvsignore  ChangeLog  MAINTAINERS  Makefile.am  configure.in
camel/: Makefile.am  broken-date-parser.c  camel-charset-map-private.h  camel-charset-map.c  camel-html-parser.c  camel-mime-filter-enriched.c  camel-mime-filter-tohtml.c  camel-provider.pc.in  camel.pc.in
camel/providers/: Makefile.am
camel/providers/groupwise/: Makefile.am
debian/: .gitignore  README.quilt  changelog  control  copyright  evolution-data-server-addressbook.install  libebook-dev.install  libebook.install  libedata-book-dev.install  libedataserver-dev.install  rules
debian/patches/: 00_bdb_licensing-fix.diff  01_exists_vcard.diff  01_glib-version.diff  02_abook-path.diff  03_bdb-error.diff  04_contact-fields.diff  05_contact-no-fileas.diff  06_no-gadu.diff  07_peer-view.diff  09_query-visible.diff  10_remove-unused.diff  11_small-cache.diff  12_summary-visible.diff  13_no_camel.diff  14_disable_i18n.diff  15_remove_from_subdirs.diff  16_documentation_build_fix.diff  16_documentation_fixes.diff  17_remove_from_dist.diff  18_remove_from_configure.diff  19_perf_instrumentation.diff  20_file_backend_index.diff  22_remove_camel_deps.diff  23_book_view_disposal.diff  24_freeze-thaw.diff  25_index_for_sorting.diff  26_delayed_vcard_parsing.diff  26_ptr_arrays.diff  27_dbus_error_mapping.diff  27_delayed_vcard_parsing.diff  28_dbus_error_mapping.diff  29_avoid-book-query-crashers.diff  30_vcard-parsing-memory-corruption-fix.diff  31_book-view-get-query.diff  32_limit-vcard-parsing.diff  33_syncable-field-flag.diff  34_phones_field.diff  35_file_backend_shorter_uids.diff  (+29 more)
libdb/: LICENSE  Makefile.am
libedataserver/: .cvsignore  Makefile.am  e-account.c  e-data-server-module.c  e-data-server-util.c  e-data-server-util.h  e-dbhash.c  e-iconv.c  e-log.c  e-log.h  e-msgport.c  e-sexp.c  e-source.c  e-util.c  e-util.h  libedataserver.pc.in
libedataserverui/: Makefile.am  e-categories-dialog.glade  e-name-selector-model.c  e-passwords.c  e-source-selector.c  libedataserverui.pc.in  test-categories-dialog.c
libuchardet/: core
libuchardet/src/: LangBulgarianModel.cpp  LangCyrillicModel.cpp  LangHebrewModel.cpp  Makefile.am  nsCharSetProber.cpp  nsCodingStateMachine.h  nsEUCTWProber.h  nsHebrewProber.h  nsLatin1Prober.cpp  nsMBCSGroupProber.cpp  nsMBCSGroupProber.h  nsMBCSSM.cpp  nsSBCSGroupProber.cpp  nsSBCharSetProber.h  nsUniversalDetector.cpp  nsUniversalDetector.h
libuchardet/tests/: Makefile.am  test_charsets  test_charsets.c  test_libuchardet  test_libuchardet.cpp
po/: sv.po
servers/: Makefile.am
src/: Makefile.am  server.c
ucamel/: Makefile.am  camel-address.c  camel-address.h  camel-charset-map-private.h  camel-charset-map.c  camel-charset-map.h  camel-internet-address.c  camel-internet-address.h  camel-mime-utils.c  camel-mime-utils.h  camel-object.h  camel.h
(+1731 files in other folders)
